# Achilles

./: .buildinfo  .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATIONS.bib  CMakeLists.txt  Dockerfile  FormFactors.yml  README.md  TODO  c12.prova.txt  cascade.yml  cascade_test.py  conf.py  genindex.html  index.html  index.rst  objects.inv  psuedocode.md  pyproject.toml  pytest.ini  requirements.txt  run.yml  run_f_RES.yml  run_nuchic_params.py  run_template.yml  search.html  searchindex.js  setup.py  versions.json
src/Achilles/: AdaptiveMap.cc  Autodiff.cc  BeamMapper.cc  Beams.cc  CMakeLists.txt  Cascade.cc  CascadeMain.cc  CascadeModule.cc  Channels.cc  ClebschGordan.cc  Coherent.cc  CombinedCuts.cc  Configuration.cc  Constants.cc  ConstantsModule.cc  Debug.cc  DecayHandler.cc  ElectronPDF.cc  Event.cc  EventGen.cc  EventHistory.cc  EventWriter.cc  FinalStateMapper.cc  FormFactor.cc  FormFactorBuilder.cc  FortranFactory.f90  FourVector.cc  HadronicMapper.cc  HardScattering.cc  HardScatteringFactory.cc  Histogram.cc  InteractionHandler.cc  InteractionLoader.cc  Interactions.cc  InteractionsFactory.cc  InteractionsModule.cc  Interpolation.cc  InterpolationModule.cc  Legendre.cc  LeptonicCurrent.cc  (+45 more)
src/Achilles/CascadeInteractions/: CMakeLists.txt  ConstantInteractions.cc  DeltaInteractions.cc  GeantInteractions.cc  MesonBaryonInteractions.cc  NasaInteractions.cc  NucleonNucleon.cc  OsetMesonBaryonInteractions.cc  PionAbsorption.cc  PionInteractions.cc  ResonanceHelper.cc
src/Achilles/Integrators/: AdaptiveQuadrature.cc  Adzint.cc  BaseIntegrator.cc  CMakeLists.txt  DoubleExponential.cc  GaussKronrod.cc  NewtonCotes.cc
src/Achilles/fortran/: CMakeLists.txt  FConstants.cc  FEvent.cc  FHardScattering.cc  FInteractions.cc  FInterpolation.cc  FLogging.cc  FMap.cc  FNuclearModel.cc  FNucleus.cc  FParticle.cc  FParticleInfo.cc  FProcessInfo.cc  FSpectralFunction.cc  FSystem.cc  FVectors.cc  amp_dcc_sl.f  amp_dcc_sl_module.f  currents_intf.f90  currents_mec.f90  currents_opt_v1.f90  currents_pi_dcc.f90  event_cdef.f90  event_mod.f90  hardscattering_mod.f90  interpolation_cdef.f90  interpolation_mod.f90  intf_spectral_model.f90  map_mod.f90  mc_module_total_xsec_ROCCO_delta.f90  mec_spectral_model.f90  nform.f90  nuclear_model.f90  nuclear_model_factory.f90  nuclear_model_interface.f90  nuclear_model_test.f90  nucleus_cdef.f90  nucleus_mod.f90  particle_cdef.f90  process_info_cdef.f90  (+12 more)
src/Achilles/fortran/OneBody/: QE_Spectral.f90  contract.f90  currents.f90  currents_opt_v1.f90  main_ddsigma.f90  pke_read_xsec.f90  xsec_fact_new.f90
src/Plugins/NucleonInteractions/: CMakeLists.txt  ConstantInteractions.cc  GeantInteractions.cc  Interactions.cc  InteractionsFactory.cc  NasaInteractions.cc  test.cc
src/nuchic/: AdaptiveMap.cc  Autodiff.cc  BeamMapper.cc  Beams.cc  CMakeLists.txt  Cascade.cc  CascadeInteraction.cc  CascadeMain.cc  CascadeModule.cc  Channels3.cc  Coherent.cc  CombinedCuts.cc  Configuration.cc  Constants.cc  ConstantsModule.cc  Cuts.cc  DeuteronDIS.cc  Event.cc  EventGen.cc  EventWriter.cc  FinalStateMapper.cc  FormFactor.cc  FormFactorBuilder.cc  FourVector.cc  HadronicMapper.cc  HardScattering.cc  HardScatteringFactory.cc  Histogram.cc  InitialStateMapper.cc  InteractionComponent.cc  InteractionComponentFactory.cc  InteractionComponentModule.cc  InteractionLoader.cc  Interactions.cc  InteractionsFactory.cc  InteractionsModule.cc  Interpolation.cc  InterpolationModule.cc  LeptonicMapper.cc  LoggingModule.cc  (+64 more)
src/nuchic/Integrators/: AdaptiveIntegrator.cc  Adzint.cc  BaseIntegrator.cc  CMakeLists.txt  DoubleExponential.cc  GaussKronrod.cc  NewtonCotes.cc
src/nuchic/data/: parse_data.py
src/nuchic/fortran/: CMakeLists.txt  FConstants.cc  FEvent.cc  FHardScattering.cc  FInterpolation.cc  FNuclearModel.cc  FNucleus.cc  FParticle.cc  FProcessInfo.cc  FVectors.cc  event_cdef.f90  event_mod.f90  hardscattering_cdef.f90  hardscattering_mod.f90  interaction_mod.f90  interpolation_cdef.f90  interpolation_mod.f90  logging_mod.f90  main_ew2b_total_IS.f90  nform.f90  nuclear_model.f90  nuclear_model_factory.f90  nuclear_model_interface.f90  one_body.f90  particle_cdef.f90  particle_info_cdef.f90  particle_mod.f90  process_info_cdef.f90  process_info_mod.f90  test_constants.f90  test_fqe.cc  test_interaction.cc  utilities.f90  vectors_cdef.f90  vectors_mod.f90
src/nuchic/fortran/HardScattering/: CMakeLists.txt  FHardScattering.cc  amp_dcc_sl.f  contract.f90  hardscattering_calculator.f90  hardscattering_mod.f90  onebody.f90  pion.f90
src/nuchic/fortran/Interactions/: CMakeLists.txt  FInteractionComponent.cc  FInteractions.cc  interaction_mod.f90
src/nuchic/fortran/Interface/: CMakeLists.txt  (+5 more)
src/nuchic/plugins/: constant_interactions.py  zero_interaction.py
src/nuchic/two_body/: currents_opt_v1.f90
src/plugins/Cuts/: CMakeLists.txt  TestCut.cc
src/plugins/HepMC3/: CMakeLists.txt  HepMC3EventWriter.cc
src/plugins/Manager/: CMakeLists.txt  PluginManager.cc
src/plugins/NuHepMC/: CMakeLists.txt  NuHepMCWriter.cc
src/plugins/Sherpa/: AchillesReader.cc  CMakeLists.txt  Channels1.cc  Channels3.cc  FormFactors.cc  SherpaInterface.cc  SherpaMEs.cc
test/: Approx.hh  CMakeLists.txt  catch_utils.hh  delta_test.cc  mock_classes.hh  test_adaptive_map.cc  test_autodiff.cc  test_beam_mapper.cc  test_beams.cc  test_cache.cc  test_cascade.cc  test_cascade.py  test_clebsch_gordan.cc  test_config.py  test_configuration.cc  test_cuts.cc  test_decays.cc  test_delta.cc  test_event.cc  test_event_history.cc  test_event_writer.cc  test_final_state_mapper.cc  test_form_factor.cc  test_fortran.f90  test_fortran_interference.f90  test_fortran_map.f90  test_fortran_utils.f90  test_four_vector.py  test_hadronic_mapper.cc  test_hard_scattering.cc  test_histogram.cc  test_histogram.py  test_integrand.cc  test_interaction_handler.cc  test_interp.cc  test_mbamplitudes.cc  test_mom_solver.cc  test_multichannel.cc  test_nuclear_model.cc  test_nucleus.cc  (+26 more)
tools/: CMakeLists.txt  ReadHepMC3.cc  convert.cc  density.py
(+557 files in other folders)
